--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "version": "1.0.0",
   "description": "Git repo for educational purposes",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
   "repository": "git@github.com:vvazarcova/git-extended.git",
-  "author": "Veronika Azarcova veronika.azartsova@gmail.com",
-  "license": "CC-BY-4.0"
+  "author": "Veronika Azarcova <veronika.azartsova@gmail.com>",
+  "license": "CC-BY-4.0",
   "config": {
     "commitizen": {
 	"path": "cz-conventional-changelog"
